Add tmux config for tmux-resurrect

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,6 @@
 set -g default-terminal "screen-256color"
 source-file ~/.dotfiles/tmux/tmux-keybindings.conf
+source-file ~/.dotfiles/tmux/tmux-plugins.conf
 
 # 
 #bind -t vi-copy y copy-pipe "xclip -sel clip -i"
