--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,9 @@
-[submodule "vim/plugins/robotframework-vim"]
-	path = vim/plugins/robotframework-vim
-	url = https://github.com/mfukar/robotframework-vim.git
 [submodule "tmux/plugins/tmux-resurrect"]
 	path = tmux/plugins/tmux-resurrect
 	url = https://github.com/tmux-plugins/tmux-resurrect.git
+[submodule "vim/plugins/bundle/vim-pathogen"]
+	path = vim/plugins/bundle/vim-pathogen
+	url = https://github.com/tpope/vim-pathogen.git
+[submodule "vim/plugins/bundle/robotframework-vim"]
+	path = vim/plugins/bundle/robotframework-vim
+	url = https://github.com/mfukar/robotframework-vim.git
