--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "vim/plugins/bundle/YouCompleteMe"]
 	path = vim/plugins/bundle/YouCompleteMe
 	url = https://github.com/Valloric/YouCompleteMe.git
+[submodule "vim/plugins/bundle/syntastic"]
+	path = vim/plugins/bundle/syntastic
+	url = https://github.com/vim-syntastic/syntastic.git
