feat(vimrc): add copy/paste clipboard, palenight plugin & tab settings

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,7 +2,7 @@ set -g default-terminal "screen-256color"
 source-file ~/.dotfiles/tmux/tmux-keybindings.conf
 source-file ~/.dotfiles/tmux/tmux-plugins.conf
 
-# 
+#
 #bind -t vi-copy y copy-pipe "xclip -sel clip -i"
 bind-key -T copy-mode-vi y send -X copy-pipe "xclip -sel clip -i"
 
@@ -11,6 +11,9 @@ set-option -g allow-rename off
 
 # Enable mouse mode (tmux 2.1 and above)
 set -g mouse on
+
+# Set History Buffer limit
+set-option -g history-limit 10000
 
 # http://www.hamvocke.com/blog/a-guide-to-customizing-your-tmux-conf/
 ######################
